syntax = "proto3";

package ethereum.v1.key;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/empty.proto";
import "google/api/resource.proto";
import "google/api/client.proto";

option go_package = "github.com/ao-labs/spacebar-apis/go/ethereum/v1/key;key";

// KeyService contains the function to interact with the Key of the spacebar
service KeyService {
  // ListKeys will return Keys.
  rpc ListKeys(ListKeysRequest) returns (ListKeysResponse) {
    option (google.api.http) = {
      get: "/v1/{profile=profiles/*}/keys"
    };
    option (google.api.method_signature) = "";
  }

  // ListKeyValueObjects will return KeyVOs.
  rpc ListKeyValueObjects(ListKeyVOsRequest) returns (ListKeyVOsResponse) {
    option (google.api.http) = {
      get: "/v1/keys"
    };
    option (google.api.method_signature) = "";
  }

  // CreateValueObjects will return KeyVOs.
//  rpc CreateValueObjects(CreateKeyVORequest) returns (KeyVO) {
//    option (google.api.http) = {
//      post: "/v1/keys"
//      body: "key_vo"
//    };
//    option (google.api.method_signature) = "key_vo";
//  }
}

// ListKeysRequest payload
// (-- api-linter: core::0158::request-page-token-field=disabled
//     aip.dev/not-precedent: We need to do this because reasons. --)
// (-- api-linter: core::0132::request-unknown-fields=disabled
//     aip.dev/not-precedent: We really need this field because reasons. --)
message ListKeysRequest {
  // The name of the profile.
  // Format: profiles/{address}
  // Wildcard "profiles/*" is supported.
  string profile = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "station.spacebarapis.xyz/Profile"
    }
  ];

  // The maximum number of keys to return. The service may return fewer than
  // this value.
  // If unspecified, at most 50 rows will be returned.
  // The maximum value is 1024; values above 1024 will be coerced to 1024.
  int32 page_size = 2;

  // Token of the page to retrieve. If not specified, the first
  // page of results will be returned. Use the value obtained from
  // `next_page_token` in the previous response in order to request
  // the next page of results.
  //
  // When paginating, all other parameters provided to `ListKeys` must match
  // the call that provided the page token.
  string page_token = 3;

  // Available Sequence and Operator
  // * name
  //   * `Equal`
  // * owner, profile
  //   * `=`
  // * state
  //   * `=`
  // * primary_type
  //   * `=`
  // * secondary_type
  //   * `=`
  // * create_time
  //   * `>`
  // * minted
  //   * Equal`
  //
  // Examples
  // * filter=name="profiles/0x6F11EF2c07f2E381CbE514198DdE87A0c0a19442/keys/0x79FCDEF22feeD20eDDacbB2587640e45491b757f"
  // * filter=owner="profiles/0x6F11EF2c07f2E381CbE514198DdE87A0c0a19442"
  // * filter=profile="profiles/0x6F11EF2c07f2E381CbE514198DdE87A0c0a19442"
  // * filter=state=CREATED
  // * filter=primary_tupe=A_KEY
  // * filter=minted
  string filter = 4;

  // One or more fields to compare and use to sort the output. (optional)
  // Default order for a field is descending by id
  // To specify ascending or descending order, append " asc" or " desc" to the field name. If not specified, the order is ascending.
  //
  // Reference
  // * https://google.aip.dev/132#ordering.
  //
  // Supported Fields
  // * "owner_address", "primary_type", "secondary_type", "token_id", "create_time", "mint_time"
  //
  // Examples
  // * order_by=mint_time asc
  // * order_by=primary_type asc, secondary_type asc
  // * order_by=token_id asc
  string order_by = 5;
}

// ListKeysResponse
// (-- api-linter: core::0158::response-next-page-token-field=disabled
//     aip.dev/not-precedent: We need to do this because reasons. --)
message ListKeysResponse {
  // The list of rows that matched the query.
  repeated Key keys = 1;

  // Pagination token used to retrieve the next page of results.
  // Pass the content of this string as the `page_token` attribute of
  // the next request. `next_page_token` is not returned for the last
  // page.
  string next_page_token = 2;

  // The total number of keys that matched with the filter query.
  uint32 total_size = 3;
}


message ListKeyVOsRequest {
  // Available Sequence and Operator
  // * primary_type
  //   * `=`
  // * secondary_type
  //   * `=`
  //
  // Examples
  // * primary_tupe="S_KEY"
  // * secondary_type="TIER_1"
  string filter = 1;
}

message ListKeyVOsResponse {
  // The list of rows that matched the query.
  repeated KeyVO key_value_objects = 1;
}

// CreateKeyVORequest
message CreateKeyVORequest {
  // score to create
  KeyVO key_vo = 1 [
    (google.api.field_behavior) = REQUIRED
  ];
}



// The state of key
enum State {
  // default value. this value is unused.
  STATE_UNSPECIFIED = 0;

  // Key was firstly created but not minted yet.
  CREATED = 1;

  // Key was firstly created with base spaceship rental.
  MINTED = 2;
}

enum PrimaryType {
  // default value. this value is unused.
  PRIMARY_TYPE_UNSPECIFIED = 0;

  // Whitelist.
  W_KEY = 1;

  // Star Gatherer
  G_KEY = 2;

  // Doodle Artist
  A_KEY = 3;

  // Star Hunter
  H_KEY = 4;

  // Top Ranker
  R_KEY = 5;

}

enum SecondaryType {
  SECONDARY_TYPE_UNSPECIFIED = 0;

  TIER_1 = 1;

  TIER_2 = 2;

  TIER_3 = 3;

  TIER_4 = 4;

  TIER_5 = 5;
}

message Key {
  option (google.api.resource) = {
    type: "station.spacebarapis.xyz/Key",
    pattern: "profiles/{profile_address}/keys/{key_address}"
  };

  // The resource name of the Key.
  // Format: profiles/{profile_address}/keys/{key_address}
  string name = 1;

  // EIP-6551 TBA Address of the Key.
  string address = 2 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // The owner of Key.
  // Format: profiles/{address}
  string owner = 3 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (google.api.resource_reference) = {
      type: "station.spacebarapis.xyz/Profile",
    }
  ];

  // The state of Key
  State state = 4 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // The created time of Key.
  // RFC3339 format e.g. "2006-01-02T15:04:05Z07:00"
  google.protobuf.Timestamp create_time = 5 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // The minted time of Key.
  // This field is only set when Key is minted. (optional)
  // RFC3339 format e.g. "2006-01-02T15:04:05Z07:00"
  optional google.protobuf.Timestamp mint_time = 6 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // The transaction hash for minting key.
  // This field is only set when Key is minted. (optional)
  optional string mint_tx_hash = 7 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];


  // The amount of Eth Contribution (nominated as wei)
  // This field is only set when Key is minted. (optional)
  optional string eth_contribution = 8 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // Whether Key finished tutorial or not
  bool is_minted = 9 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // Key value object
  KeyVO vo = 10 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];
}


message KeyVO {
  // EIP-6551 TBA Address of the Key VO.
  string address = 1 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // Token ID of the Key VO.
  // Output only.
  string token_id = 2 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];


  // The primary type of the Key VO.
  // Output only.
  PrimaryType primary_type = 3;

  // The secondary type of the Key VO.
  // Output only.
  SecondaryType secondary_type = 4;

  // The cached URI of the Key VO's image.
  // Output only.
  string cached_image_uri = 5 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // The original URI of the Key VO's image.
  // e.g. ipfs://Qm...
  // Output only.
  string original_image_uri = 6 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // The URI of the Key VO's image.
  // Output only.
  string metadata_uri = 7 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // The contract that owns the Key VO.
  // Output only.
  string contractAddress = 8;
}


